--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,14 +8,7 @@
     <script>
       window.global = window;
     </script>
-    <script type="module">
-      import process from "process";
-      import { Buffer } from "buffer";
-      import EventEmitter from "events";
-
-      window.Buffer = Buffer;
-      window.process = process;
-      window.EventEmitter = EventEmitter;
+    <script type="module" src="/src/head.js">
     </script>
   </head>
   <body>
